--- a/src/components/layout/header/Header.css
+++ b/src/components/layout/header/Header.css
@@ -1,5 +1,4 @@
 @import url('/src/shared/style/colors.css');
-
 .header {
   width: 100%;
   height: 90px;
@@ -10,7 +9,7 @@
   border-bottom: solid 1px var(--gray);
 }
 
-.parent-logo-container{
+.parent-logo-container {
   display: flex;
   width: 90px;
   height: 90px;
@@ -29,14 +28,13 @@
   padding: 13px;
 }
 
-.logo-png{
+.logo-png {
   width: 24px;
   height: 24px;
 }
 
 .buttons-container {
   display: flex;
-  width: 417px;
   height: 90px;
   gap: 20px;
   margin-right: 24px;
@@ -44,42 +42,8 @@
   align-items: center;
 }
 
-
-.normal-button {
-  width: 199px;
-  height: 50px;
-  background-color: var(--blue2);
-  color: var(--white);
-  border: none;
-  border-radius: 70px;
-  cursor: pointer;
-}
-
-.square-button, .avatar-button {
-  width: 50px;
-  height: 50px;
-  background-color: var(--gray);
-  color: var(--white);
-  border: none;
-  border-radius: 50%;
-  cursor: pointer;
-}
-
-.square-button img {
-  width: 20px;
-  height: 20px;
-  align-items: center;
-  justify-content: center;
-}
-
-.avatar-button img {
-  width: 100%;
-  height: 100%;
-  align-items: center;
-  justify-content: center;
-  border-radius: 50%;
-}
-
-.header button:hover {
-  background-color: var(--blue2);
+.header .normal-variant:hover,
+.header .square-variant:hover,
+.header .avatar-variant:hover {
+  background-color: var(--bluePress);
 }
