--- a/src/components/layout/infoAndFilters/InfoAndFilters.css
+++ b/src/components/layout/infoAndFilters/InfoAndFilters.css
@@ -1,7 +1,7 @@
 @import url('/src/shared/style/colors.css');
 
 .info-and-filters {
-  width: calc(100% - 90px);
+  width: 100%;
   height: 820px;
   display: flex;
   justify-content: flex-start;
@@ -9,7 +9,6 @@
   background: var(--gray2);
   flex-direction: column;
 }
-
 .textAndButtons-container {
   width: 100%;
   height: 98px;
@@ -17,8 +16,6 @@
   justify-content: space-between;
   align-items: center;
 }
-
-
 .text-container{
   display: flex;
   width: 148px;
@@ -27,7 +24,6 @@
   justify-content: center;
   margin-left: 24px;
 }
-
 .info-text {
   color: var(--blue);
   font-size: 14px;
@@ -35,7 +31,6 @@
   line-height: 30px;
   word-wrap: break-word;
 }
-
 .buttons-container{
   display: flex;
   width: 371px;
@@ -46,24 +41,6 @@
   align-items: center;
 }
 
-.button1 {
-  width: 235px;
-  height: 50px;
-  border-radius: 70px;
-  border: solid 1px var(--gray);
-  cursor: pointer;
-  background-color: var(--white);
-}
-
-.button2 {
-  width: 116px;
-  height: 50px;
-  border-radius: 70px;
-  border: solid 1px var(--gray);
-  cursor: pointer;
-  background-color: var(--white);
-}
-
 .customers-container {
   width: 100%;
   height: 720px;
@@ -72,48 +49,9 @@
   align-items: center;
   flex-direction: column;
 }
-
 table {
   width: calc(100% - 90px);
   border-collapse: collapse;
-}
-
-.avatar-image {
-  width: 44px;
-  height: 44px;
-  object-fit: cover;
-  border-radius: 50%;
-}
-
-.edit-button{
-  width: 44px;
-  height: 44px;
-  object-fit: cover;
-  border-radius: 50%;
-  border: solid 1px var(--gray);
-  cursor: pointer;
-  background-color: var(--white);
-}
-
-.edit-image {
-  height: 24px;
-  object-fit: cover;
-}
-
-.remove-button{
-  width: 44px;
-  height: 44px;
-  object-fit: cover;
-  border-radius: 50%;
-  border: solid 1px var(--gray);
-  cursor: pointer;
-  background-color: var(--white);
-}
-
-.remove-image {
-  width: 24px;
-  height: 24px;
-  object-fit: cover;
 }
 
 th, td {
@@ -123,7 +61,6 @@ th, td {
   border-right: none;
   border-left: none;
 }
-
 thead {
   background-color: var(--gray2);
   color: var(--black);
