--- a/src/components/layout/sidebarNavigation/SidebarNavigation.css
+++ b/src/components/layout/sidebarNavigation/SidebarNavigation.css
@@ -1,6 +1,7 @@
 @import url('/src/shared/style/colors.css');
 
 .sidebar-navigation {
+  flex-shrink: 0;
   display: flex;
   width: 90px;
   height: 820px;
@@ -9,23 +10,4 @@
   align-items: center;
   border-right: 1px solid var(--gray);
   gap: 10px;
-}
-
-.circle-button {
-  width: 50px;
-  height: 50px;
-  border: 1px var(--gray);
-  border-radius: 50%;
-  background: var(--white);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-  margin-top: 20px;
-  border: solid 1px var(--gray);
-}
-
-.circle-button img {
-  max-width: 100%;
-  max-height: 100%;
 }
