--- a/src/shared/Style/Colors.css
+++ b/src/shared/Style/Colors.css
@@ -4,6 +4,7 @@
     --gray: #EAEEF4;
     --blue: #092C4C;
     --gray2: #F6FAFDE5;
+    --buttonGray: #7E92A2;
     --blue2: #514EF3;
     --bluePress: #211ede;
   }
