--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -82,6 +82,26 @@
   background-color: var(--white);
 }
 
+.modal-save-button{
+  width: 150px;
+  height: 50px;
+  background-color: var(--blue2);
+  color: var(--white);
+  border: none;
+  border-radius: 70px;
+  cursor: pointer;
+
+}
+
+.modal-cancel-button{
+  width: 95px;
+  height: 50px;
+  border-radius: 70px;
+  border: solid 1px var(--gray);
+  cursor: pointer;
+  background-color: var(--gary2);
+}
+
 .edit-image,
 .remove-image {
   width: 24px;
