--- a/src/components/layout/infoAndFilters/InfoAndFilters.css
+++ b/src/components/layout/infoAndFilters/InfoAndFilters.css
@@ -2,7 +2,7 @@
 
 .info-and-filters {
   width: 100%;
-  height: 820px;
+  height: 100%;
   display: flex;
   justify-content: flex-start;
   align-items: baseline;
